deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extauth-grpcservice
spec:
  selector:
    matchLabels:
      app: grpc-extauth
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-extauth
    spec:
      containers:
        - name: grpc-extauth
          image: asayah/passthrough-grpc-service-example
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
